18-02-2005 Qball <qball@qballcow.nl>
	* src/playlist3.c:	Song highlighting is now done using the state
	and song change signal from libmpd. highlighting should work like
	expected again.

17-02-2005 Qball <qball@qballcow.nl>
	* src/tray-icon.c:	Actually make it use libmpd.
	* src/tray-icon.c:	Make it use libmpd completely
	* glade/gmpc.glade:	Removed find artist/album from file. 
	* src/id3info.c:	Make it use libmpd.

16-02-2005 Qball <qball@qballcow.nl>
	* src/libmpd.c/h:	Added
	mpd_ob_status_get_total/elapsed_song_time (and more)
	* src/player.c:		Use mpd_ob_status_get_total/elapsed_song_time
	* src/player.c:		remove use of libmpdclient?
	* src/player.c:		volume flag instead of "conlock"
	* src/debug_printf:	Added a debug level control.
	* src/player.c:		cleaned out all info. stuff.


15-02-2005 Qball <Qball@qballcow.nl>
	* src/libmpd.c/h:	Added basic error checking.
	* src/callback.c:	use libmpd error_check.

12-02-2005 Qball <Qball@qballcow.nl>
	* src/player.c:		Changed the seeking to a libmpd function.
	Added seek flag.
	* src/libmpd.c/h:	Added mpd_ob_player_seek().

29-01-2005 encoded <encoded@xmtp.net>
	* src/preferences.c     Check version before adding support for
	* glade/gmpc.glade	(dis|en)abling outputs.
	
28-01-2005 encoded <encoded@xmtp.net>
	* src/preferences.c:     Added support for (dis|en)abling outputs.
	* glade/gmpc.glade:
	
28-01-2005 Qball <qball@qballcow.nl>:
	* src/libmpdclient.c:	Fixed not-initialized pointer.
	* src/player.c:		Moved more to libmpd
	
01-19-2005 avuton <avuton@gmail.com>
	* src/playlist3.c:       Inadvertantly removed playlist saving ability
	* glade/playlist3.glade: when I removed playlist.glade on the 10th,
	* glade/playlist3.glade: move it to playlist3.glade

01-19-2005 avuton <avuton@gmail.com>
	* src/libmpdclient.c:   Update libmpdclient.c so it will be able to
	* src/libmpdclient.c:   compile in cygwin

01-10-2005 avuton <avuton@gmail.com>
	* glade/gmpc.glade:     Remove 'update' from 'Server settings' menu